add a:hover to common

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -5,3 +5,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+a{
+    color: #0b0b0b;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #20AD96;
+}
