--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -14,3 +14,11 @@ a{
 a:hover{
     color: #20AD96;
 }
+
+.btn-green{
+    background-color: #20AD96;
+    color: white;
+    padding: 15px 25px;
+    border:none;
+    font-size: 20px;
+}
